<resources>
    <string name="app_name">BiciLock</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Enter</string>
    <string name="title_activity_new_bike">New Bike</string>
    <string name="title_activity_bikelist">Your Garage</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_photos">Add Photos</string>
    <string name="title_activity_show_images">Photos</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_show_bike">Your Bike</string>
    <string name="title_activity_set_stolen">Set Stolen</string>
    <string name="title_activity_edit_bike">Edit Bike</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="charging">Charging</string>
    <string name="showing_garage">Showing Garage</string>
    <string name="charging_error">Charging Error</string>
    <string name="successfully_removed">Successfully removed</string>
    <string name="error_removing">Error. Could not be deleted.</string>
    <string name="server_error">Server error</string>
    <string name="remove_bike">Remove bike</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_stolen">This bike has not been stolen</string>
    <string name="not_database">This bike is not in the database</string>
    <string name="stolen_bike">This is a stolen bike!</string>
    <string name="notify_owner">Do you want to notify the owner?</string>
    <string name="cancel_edition">Edition canceled</string>
    <string name="bike_updated">Bike updated</string>
    <string name="error_updating">Updating error</string>
    <string name="login_ok">Successfully logged in</string>
    <string name="login_error">Login error. Incorrect user and/or password</string>
    <string name="new_bike_ok">Bike added successfully</string>
    <string name="new_bike_error">Error adding new bike</string>
    <string name="new_user_ok">User created successfully</string>
    <string name="new_user_error">Error creating user</string>
    <string name="modify_state">Modity state?</string>
    <string name="state_modified_ok">State modified successfully</string>
    <string name="state_modified_error">Error modifing state</string>
    <string name="choose_source">Choose source</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="select_picture">Select picture</string>
    <string name="uploading">Uploading</string>
    <string name="upload_ok">Picture uploaded successfully</string>
    <string name="upload_error">Error uploading photo</string>
    <string name="enter_sn">Enter Serial Number</string>
    <string name="check">Check</string>
    <string name="register_screen">Register Screen</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="town">Town</string>
    <string name="province">Province</string>
    <string name="phone">Phone</string>
    <string name="accept">Accept</string>
    <string name="serial_number">Serial Number</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="enter">Enter</string>
    <string name="welcome">Welcome to Bicilock</string>
    <string name="guest">Guest</string>
    <string name="what_do_you_want">What do you want to do?</string>
    <string name="check_sn">Check Serial Number</string>
    <string name="manage">Manage garage</string>
    <string name="edit_personal">Edit personal data</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="stolen">Stolen?</string>
    <string name="details">Details</string>
    <string name="set_state">Set state</string>
    <string name="show_photos">Show photos</string>
    <string name="manage_robbery">Manage robbery</string>
    <string name="choose_photo">Choose photo</string>
    <string name="add">Add</string>
    <string name="user">User</string>
    <string name="garage">Garage</string>
    <string name="exit">Exit</string>
    <string name="complete_fields">Complete all the fields</string>
    <string name="not_valid_email">This is not a valid email</string>
    <string name="title_activity_edit_user">Personal information</string>
    <string name="data_updated_ok">Data successfully updated</string>
    <string name="showing_user_data">Showing personal data</string>
    <string name="title_activity_confirm_bike">is this bike?</string>
    <string name="showing_bike">Showing bike</string>
    <string name="title_activity_notify">Send message</string>
    <string name="send">Send</string>
    <string name="notice">Notice</string>
    <string name="error_user_exists">Error. This user already exists</string>
    <string name="error_bike_exists">Error. This bike already exists</string>
    <string name="mail_sent">Notification sent</string>
    <string name="wrong_bike">Serial number should be wrong</string>
    <string name="remove_photo">Remove photo</string>

</resources>
