<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/garage">
        <menu>
            <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/manage" />

            <item
                android:id="@+id/nav_check"
                android:icon="@drawable/ic_check_circle_black_24dp"
                android:title="@string/check_sn" />
        </menu>
    </item>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_person_outline_black_24dp"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/register" />
        </menu>

    </item>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit" />

</menu>
