<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvBrandItem"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/iv"
        android:singleLine="true"
        android:text="@string/brand"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/tvModelItem"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/iv"
        android:gravity="center_vertical"
        android:text="@string/model"
        android:textIsSelectable="false" />
</RelativeLayout>