<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="david.bicilock.CheckBikeActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/enter_sn"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="35dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="132dp"
        android:layout_marginTop="30dp"
        android:onClick="checkSerialNumber"
        android:layout_below="@+id/etSerialNumberCheckBike"
        android:layout_alignStart="@+id/etSerialNumberCheckBike" />

    <EditText
        android:id="@+id/etSerialNumberCheckBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="65dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/etSerialNumberCheckBike" />
</RelativeLayout>
